--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3K5icML1IKkwcpsQOl4wag?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                         <h3>Instagram</h3>
                         <a href="https://www.instagram.com/reel/Crj_aespi46/" target="_blank">
-                            <img src="https://www.instagram.com/p/Crj_aespi46/" alt="Instagram Post Preview">
+                            <img src="assets/instagram-preview.jpg" alt="Instagram Post Preview">
                         </a>
 
                     </ul>
