--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Aiden Walters - Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ICO" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -215,7 +215,7 @@
                         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3K5icML1IKkwcpsQOl4wag?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                         <h3>Instagram</h3>
                         <a href="https://www.instagram.com/reel/Crj_aespi46/" target="_blank">
-                            <img src="aidenwalters/assets/img/instagram-preview.JPG" alt="Instagram Post Preview">
+                            <img src="aidenwalters/assets/img/instagram-preview.jpg" alt="Instagram Post Preview">
                         </a>
 
                     </ul>
