--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
                             <span class="fa-li"><i class="fas fa-tools"></i></span>
                             <div>
                                 <p>2-Stroke Engine Design: A CAD model of an engine developed in SolidWorks for simulations and analysis.</p>
+                                <a href="https://github.com/aidenwalters/2StrokeEngine/blob/main/engineGIF.gif" target="_blank">
+                                <img src="https://github.com/aidenwalters/2StrokeEngine/blob/main/engineGIF.gif" alt="Engine Project" width="500" height="600">
+                                </a>
+                            </div>
+                            <br>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-tools"></i></span>
+                            <div>
+                                <p>2-Stroke Engine Design: A CAD model of an engine developed in SolidWorks for simulations and analysis.</p>
                                 <img src="![engineGIF](https://github.com/aidenwalters/aidenwalters/assets/134304414/18ad2b37-27df-491e-9f81-0f352b1a7cb2)" alt="Engine Project" width="500" height="600">
                             </div>
                             <br>
