--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         591 Hulls Farm Rd · Southport, CT 06890 · (203) 997-6506 ·
                         <a href="mailto:name@email.com">aidenwalters55@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a mechanical(undergrad) and product devlopment(grad) engineering student at USC with a focus on programming and a minor in jazz performance. My skills include rapid prototyping and new product development.</p>
+                    <p class="lead mb-5">I am a mechanical engineering and product devlopment student at USC with a focus on programming and a minor in jazz performance. My skills include rapid prototyping and new product development.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/aiden-m-walters"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/aidenwalters"><i class="fab fa-github"></i></a>
@@ -66,7 +66,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Product Development Research Assistant</h3>
                             <div class="subheading mb-3">iPodia Alliance</div>
-                            <p>Collaborated with the Director of Product Development Engineering(PDE) Stephen Lu to develop and refine concepts for a new book on conceptual design. Assisted in the writing, editing, and proofreading of the book, ensuring accuracy and clarity of content. Created a VR campus tour during the COVID-19 pandemic so that my classmates from other iPodia Alliance universities could tour USC</p>
+                            <p>Collaborated with the Director of Product Development Engineering(PDE) Stephen Lu to develop and refine concepts for a new book on conceptual design. Assisted in the writing, editing, and proofreading of the book, ensuring accuracy and clarity of content. Also Created a VR campus tour during the COVID-19 pandemic so that my classmates from other iPodia Alliance universities could tour USC</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2021 - Present</span></div>
                     </div>
