--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Product Design of New Coaster</h3>
+                            <div class="subheading mb-3">iPodia Alliance</div>
+                            <p>Created and tested a responsive drink coaster, revolutionizing simple transactions and behaviors at a bar into an engaging, interactive consumer experience while working as a bartender at SONO Wood Fired. Soldered an Arduino control system and 3D printed the housing on Fusion360 while collaborating with the Sacred Heart IDEA Lab, showcasing a proactive approach to technical problem-solving and innovative craftsmanship.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Product Development Research Assistant</h3>
                             <div class="subheading mb-3">iPodia Alliance</div>
                             <p>Collaborated with the Director of Product Development Engineering(PDE) Stephen Lu to develop and refine concepts for a new book on conceptual design. Assisted in the writing, editing, and proofreading of the book, ensuring accuracy and clarity of content. Also Created a VR campus tour during the COVID-19 pandemic so that my classmates from other iPodia Alliance universities could tour USC</p>
@@ -148,7 +156,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-tools"></i></span>
                             <div>
-                                <p>Friend Network: An object oriented program on pythod designed to allow the user to search for friends, add and remove friends, and see suggested friends based on existing connections. This program can also display a visual friend network graph.</p>
+                                <p>Friend Network: An object oriented program on python designed to allow the user to search for friends, add and remove friends, and see suggested friends based on existing connections. This program can also display a visual friend network graph.</p>
                                 <a href="https://github.com/aidenwalters/Friend-Network-OOP">https://github.com/aidenwalters/Friend-Network-OOP</a>
                             </div>
                             <br>
@@ -210,7 +218,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being an engineer, I enjoy most of my time being outdoors. In the winter, I am an avid snowboarder and racketball player. During the summer I spend my time, hiking and playing golf.</p>
+                    <p>Apart from being an engineer, I enjoy most of my time being outdoors. In the winter, I am an avid snowboarder and racketball player. During the summer I spend my time hiking and playing golf.</p>
                     <p class="mb-0">When forced indoors, I like to read classic novels from The Sun Also Rises to Catch-22, I enjoy spending time with my dog, and I spend a large amount of my free time studying, recording, and performing music.</p>
                 </div>
             </section>
