--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <section class="resume-section" id="music">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Music</h2>
-                    <p>Here are some links to my music:</p>
+                    <p>Here are some links to recordings of my music:</p>
                     <ul>
                         <h3>Spotify</h3>
                         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3K5icML1IKkwcpsQOl4wag?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
