--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <div class="subheading mb-3">Personal Project</div>
                             <p>Created and tested a responsive drink coaster, revolutionizing simple transactions and behaviors at a bar into an engaging, interactive consumer experience while working as a bartender at SONO Wood Fired. Soldered an Arduino control system and 3D printed the housing on Fusion360 while collaborating with the Sacred Heart IDEA Lab, showcasing a proactive approach to technical problem-solving and innovative craftsmanship.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Fall 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Summer 2023 - Fall 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -76,7 +76,7 @@
                             <div class="subheading mb-3">iPodia Alliance</div>
                             <p>Collaborated with the Director of Product Development Engineering(PDE) Stephen Lu to develop and refine concepts for a new book on conceptual design. Assisted in the writing, editing, and proofreading of the book, ensuring accuracy and clarity of content. Also Created a VR campus tour during the COVID-19 pandemic so that my classmates from other iPodia Alliance universities could tour USC</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Fall 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2021 - Fall 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -90,7 +90,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Design Engineer Intern</h3>
                             <div class="subheading mb-3">Mesa Energy Solutions</div>
-                            <p>Drew CAD models for inventory on SolidWorks using physical parts and data sheets. Designed and assembled the first prototype of the 22L PowerCore generator using Sheet Metal and Weldments on Solidworks.</p>
+                            <p>Collaborated with design, electrical, and power engineering teams to prototype an innovative 350kW flare-gas-powered generator, specifically designed to fit within a shipping container for deployment in remote locations. Procured and assembled the first prototype, utilizing SolidWorks to redesign the generator's housing with sheet metal and weldments to improve design for assembly.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2021-August 2021</span></div>
                     </div>
