--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Product Design of New Coaster</h3>
-                            <div class="subheading mb-3">Personal Project</div>
+                            <h3 class="mb-0">Founder and Product Designer</h3>
+                            <div class="subheading mb-3">Independent Startup</div>
                             <p>Created and tested a responsive drink coaster, revolutionizing simple transactions and behaviors at a bar into an engaging, interactive consumer experience while working as a bartender at SONO Wood Fired. Soldered an Arduino control system and 3D printed the housing on Fusion360 while collaborating with the Sacred Heart IDEA Lab, showcasing a proactive approach to technical problem-solving and innovative craftsmanship.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Summer 2023 - Fall 2023</span></div>
